# WandeltCompiler

./: .clang-format  .gitignore  .gitmodules  Build.lua  CMakeLists.txt  Clean-Windows-VS2022.bat  Dependencies.lua  GroupSourcesByFolder.cmake  LLVM.lua  Setup-Windows-VS2022.bat
Compiler/src/: main.cpp
Wandelt/: Build-Wandelt.lua
Wandelt/src/: main.cpp
WandeltCore/: Build-WandeltCore.lua  CMakeLists.txt
WandeltCore/src/: Wandelt.hpp  pch.hpp
WandeltCore/src/Core/: Compiler.cpp  Compiler.hpp  Defines.hpp  Error.cpp  Error.hpp  ScopedTimer.cpp  ScopedTimer.hpp  Utils.hpp
WandeltCore/src/Core/AST/: AST.cpp  AST.hpp  Visitor.hpp
WandeltCore/src/Core/Codegen/: Codegen.cpp  Codegen.hpp
WandeltCore/src/Core/FileSystem/: FileSystem.cpp  FileSystem.hpp
WandeltCore/src/Core/Lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
WandeltCore/src/Core/Parser/: Parser.cpp  Parser.hpp
WandeltCore/src/Core/Sema/: Sema.cpp  Sema.hpp
WandeltExamples/: simple.wdt
